# trajectory_challenge

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Containerfile  README.md  docker-compose.yml  main_tasks.md  pyproject.toml  trajectory_challenge.md  trajectory_dashboard_app.py
.github/chatmodes/: cleanup.chatmode.md  plan.chatmode.md
.github/instructions/: 00-master-project-plan.instructions.md  M1_foundation.instructions.md  M2_data_pipeline.instructions.md  M3_feature_engineering.instructions.md  M4_model_interface.instructions.md  M5_baseline_models.instructions.md  M6_advanced_models.instructions.md  M7_evaluation_visualization.instructions.md  M8_production_deployment.instructions.md  dataset_record.instructions.md  milestone-01-project-setup.instructions.md  milestone-02-data-models.instructions.md  milestone-03-etl-pipeline.instructions.md  milestone-04-feature-engineering.instructions.md  milestone-05-baseline-models.instructions.md  milestone-06-advanced-models.instructions.md  milestone-07-evaluation-framework.instructions.md  milestone-08-dashboard-visualization.instructions.md  milestone-09-mlops-production.instructions.md  milestone-10-testing-documentation.instructions.md  milestone_plan.md  tools.instructions.md
.github/prompts/: gui_features.prompt.md  predictor_frameworks.prompt.md  refactor.prompt.md
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: ngsim.yaml
configs/evaluation/: standard.yaml
configs/models/: baseline.yaml
docs/: Makefile  conf.py  index.rst
examples/: downloader_demo.py  milestone_03_demo.py  milestone_04_demo.py  milestone_05_demo.py  milestone_06_demo.py  milestone_07_demo.py  milestone_07_evaluation_report.txt  milestone_08_demo.py
notebooks/: README.md
scripts/: README.md
scripts/dashboard/: trajectory_dashboard_app.py
src/: main.py
src/trajectory_challenge/: __init__.py  __main__.py  gui.py  gui_cli.py  gui_predictors.py  ngsim.py  trajectory.py  utils.py
src/trajectory_challenge/predictors/: __init__.py  base.py  baselines.py  evaluation.py  features.py
src/trajectory_prediction/: __init__.py  cli.py
src/trajectory_prediction/data/: __init__.py  models.py  ngsim.py  validation.py
src/trajectory_prediction/evaluation/: __init__.py  comprehensive_evaluator.py  cross_validation.py  metrics.py  safety_metrics.py  statistical_testing.py  uncertainty_metrics.py
src/trajectory_prediction/models/: __init__.py  base.py  baseline.py  ensemble.py  factory.py  gaussian_process.py  knn.py  mixture_density.py  polynomial.py  tree_ensemble.py
src/trajectory_prediction/utils/: __init__.py  logging.py
src/trajectory_prediction/visualization/: __init__.py  analytics.py  dashboard.py  plots.py
tests/: conftest.py  simple_test_milestone_04.py  test_cli.py  test_data_models.py  test_init.py  test_milestone_03.py  test_milestone_04.py  test_milestone_04_simple.py  test_milestone_05.py  test_milestone_06.py  test_milestone_07.py  test_ngsim.py  test_ngsim_downloader.py  test_trajectory_quality.py  test_utils_logging.py  test_visualization.py
