[project]
name = "trajectory-challenge"
version = "0.1.0"
description = "Basic skeleton project"
readme = "README.md"
authors = [ { name = "Your Name", email = "you@example.com" } ]
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["template", "skeleton"]
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "pyarrow>=17.0.0",
  "matplotlib>=3.10.5",
  "seaborn>=0.13.2",
]

[project.scripts]
trajectory-challenge = "trajectory_challenge.__main__:main"
trajectory-gui = "trajectory_challenge.gui_cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov",
  "ruff>=0.5.0",
  "pyright",
  "typing-extensions",
  "pandas>=2.2.0",
  "requests>=2.32.0"
]

gui = [
  "streamlit>=1.36.0",
  "plotly>=5.22.0",
  "altair>=5.3.0"
]

[tool.uv]
# uv specific settings can go here later

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=trajectory_challenge --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "C4", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.12"
include = ["src/trajectory_challenge"]
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
